remove btn class and fix spacing of heading

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -24,6 +24,9 @@
       padding-bottom: 0.5em;
       color: $fifthColor;
       font-size: 30px;
+      text-transform: uppercase;
+      letter-spacing: 10px;
+      font-weight: 300;
 
       @include mobile {
         font-size: 22px;
@@ -42,24 +45,6 @@
       display: flex;
       justify-content: flex-end;
       width: 100%;
-      .download-btn {
-        margin-top: 1.5em;
-        padding: 1em;
-        color: white;
-        background-color: $mainColor;
-        border-radius: 0.5em;
-        box-shadow: none;
-        a {
-          text-decoration: none;
-          color: white;
-        }
-        &:hover {
-          opacity:0.8;
-          transition: all 0.3s ease-in;
-        }
-      }
     }
-
-  
   }
 }
